--- a/src/app/components/catalog/catalog.component.html
+++ b/src/app/components/catalog/catalog.component.html
@@ -1,1 +1,4 @@
-<p>catalog works!</p>
+<main class="main">
+  <app-catalog-search></app-catalog-search>
+  <app-catalog-elements></app-catalog-elements>
+</main>
