--- a/src/app/components/clothes-slider/clothes-slider.component.css
+++ b/src/app/components/clothes-slider/clothes-slider.component.css
@@ -1,10 +1,11 @@
 .clothes-section {
-  height: 300px;
+  height: 330px;
   display: flex;
   flex-direction: column;
 }
 
 .clothes-swiper {
+  z-index: 2;
   position: relative;
   top: -170px;
   min-height: 450px;
@@ -65,12 +66,13 @@
 }
 
 .slider-title {
-  color: #464654;
+  color: #f45454;
   display: block;
   position: relative;
   margin: 0 auto;
-  top: -150px;
+  top: 280px;
   transition: all 0.3s ease;
+  z-index: 5;
 }
 
 .slider-title:hover {
