--- a/src/app/components/clothes-slider/clothes-slider.component.html
+++ b/src/app/components/clothes-slider/clothes-slider.component.html
@@ -1,7 +1,9 @@
 <section class="clothes-section">
+  <h2 class="slider-title">НОВА КОЛЕКЦІЯ</h2>
   <swiper-container class = "clothes-swiper">
     <swiper-slide class = "slide">
-      <div class="clothes-container section_container" *ngFor = "let product of products.slice(0,4)">
+      <div class="clothes-container section_container" *ngFor = "let product of products.slice(0,4)"
+      (click)="logProducts()">
         <img class="clothes-image" src="{{product.image}}" alt="product">
         <div class="text-container">
           <h4 class="title">{{product.title}}</h4>
@@ -19,6 +21,5 @@
       </div>
     </swiper-slide>
   </swiper-container>
-  <h2 class="slider-title">РЕЧІ ТИЖНЯ</h2>
 </section>
 
