--- a/src/app/components/clothes-slider/clothes-slider.component.scss
+++ b/src/app/components/clothes-slider/clothes-slider.component.scss
@@ -1,9 +1,10 @@
 .clothes-section{
-  height: 300px;
+  height: 330px;
   display: flex;
   flex-direction: column;
 }
 .clothes-swiper{
+  z-index: 2;
   position: relative;
   top: -170px;
   min-height: 450px;
@@ -55,12 +56,13 @@
   justify-content: space-between;
 }
 .slider-title{
-  color: #464654;
+  color: #f45454;
   display: block;
   position: relative;
   margin: 0 auto;
-  top: -150px;
+  top: 280px;
   transition: all 0.3s ease;
+  z-index: 5;
 }
 .slider-title:hover{
   color: #f45454;
