--- a/src/app/components/head/head.component.scss
+++ b/src/app/components/head/head.component.scss
@@ -11,6 +11,8 @@
   height: 16px;
 }
 .navigation{
+  width: 450px;
+  justify-content: space-around;
   display: flex;
   align-items: center;
 }
@@ -30,3 +32,7 @@
 .link:hover{
   color: #f45454;
 }
+.active{
+  color: #f45454;
+}
+
