--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,13 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
 /*# sourceMappingURL=styles.css.map */
