--- a/src/app/components/catalog-elements/catalog-elements.component.scss
+++ b/src/app/components/catalog-elements/catalog-elements.component.scss
@@ -12,6 +12,7 @@
   flex-direction: column;
   align-items: center;
   width: 330px;
+  height: 450px;
   transition: all 0.2s ease;
 }
 .section_container{
@@ -72,7 +73,7 @@
 }
 .pages-button-container{
   height: 60px;
-  margin-top: 60px;
+  margin-top: 180px;
 }
 .page-link{
   margin: 15px;
@@ -84,7 +85,7 @@
   border: 1px solid #cbcbcb;
   transition: all 0.4s ease;
 }
-.page-link:hover, .page-link:active{
+.page-link:hover, .btnActivated{
   background-color: #f45454;
   color: white;
   border-color: #f45454;
