--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,2 +1,7 @@
 <app-main-slider></app-main-slider>
-<app-clothes-slider></app-clothes-slider>
+<app-clothes-slider
+  [sliderTitle]="sliderTitle"
+  [productsAmount]="productSliderAmount"
+  [products]="products"
+  [itemsOnSlide]="itemsOnSlide"
+></app-clothes-slider>
