--- a/src/app/components/clothes-slider/clothes-slider.component.html
+++ b/src/app/components/clothes-slider/clothes-slider.component.html
@@ -1,23 +1,11 @@
 <section class="clothes-section">
-  <h2 class="slider-title">НОВА КОЛЕКЦІЯ</h2>
-  <swiper-container class = "clothes-swiper">
-    <swiper-slide class = "slide">
-      <div class="clothes-container section_container" *ngFor = "let product of products.slice(0,4)"
-      (click)="logProducts()">
-        <img class="clothes-image" src="{{product.image}}" alt="product">
-        <div class="text-container">
-          <h4 class="title">{{product.title}}</h4>
-          <h4 class="price">{{product.price | currency}}</h4>
-        </div>
-      </div>
-    </swiper-slide>
-    <swiper-slide class ="slide">
-      <div class="clothes-container section_container" *ngFor = "let product of products.slice(4,8)">
-        <img class="clothes-image" src="{{product.image}}" alt="product">
-        <div class="text-container">
-          <h4 class="title">{{product.title}}</h4>
-          <h4 class="price">{{product.price | currency}}</h4>
-        </div>
+  <h2 class="slider-title">{{sliderTitle | uppercase}}</h2>
+  <swiper-container class="clothes-swiper">
+    <swiper-slide class="slide" *ngFor="let empty of createRange(slidersAmount) let i = index">
+      <div class="clothes-container section_container"
+           *ngFor="let product of products.slice(itemsOnSlide*i,itemsOnSlide*(i+1))"
+           [routerLink]="['/item', product?.id]">
+        <app-item [myProduct]="product"></app-item>
       </div>
     </swiper-slide>
   </swiper-container>
