--- a/src/app/components/clothes-slider/clothes-slider.component.scss
+++ b/src/app/components/clothes-slider/clothes-slider.component.scss
@@ -14,46 +14,24 @@
   background-color: white;
   filter: drop-shadow(0 0 15px rgba(0,0,0, 0.2));
 }
-.slide{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  height: 450px;
-}
-.clothes-image{
-  height: 250px;
-  width: 200px;
-  transition: all 0.3s ease;
-}
 .clothes-container{
+  background-color: rgba(249, 249, 255, 0.5);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 270px;
+  height: 350px;
   transition: all 0.3s ease;
 }
 .clothes-container:hover{
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
-.clothes-image:hover{
-  transform: scale(1.1);
-}
-.title{
-  text-align: center;
-  margin-bottom: 0;
-}
-.price{
-  margin-top: 0;
-  font-weight: 700;
-  color: red
-}
-.text-container{
-  height: 150px;
+.slide{
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
+  height: 450px;
 }
 .slider-title{
   color: #f45454;
