--- a/src/app/components/catalog-search/catalog-search.component.html
+++ b/src/app/components/catalog-search/catalog-search.component.html
@@ -1,55 +1,35 @@
 <nav class="nav">
   <h2 class="nav-header search-header">Пошук</h2>
-  <input class="nav_input search-input">
+  <input class="nav_input search-input"
+         [ngModel]="filterTitle"
+         (ngModelChange)="onFilterTitleChange($event)"
+  >
   <div class="nav_filters filters-container">
     <h2 class="nav-header search-header">Фільтри</h2>
 
-    <div class="filter nav_filter" (click)="tap(0)">
+    <div class="filter nav_filter" (click)="showFilter(0)">
       <h3>Ціна</h3>
       <span class="arrow"></span>
     </div>
     <div class="nav_price price-filter hidden"
          [ngClass]="{visible: visibleArray[0]}">
       <div class="price-wrapper">
-        <input class="input-price" type="number" ngDefaultControl name="minPriceName" [(ngModel)]="minPrice">
+        <input class="input-price" type="number"
+               [(ngModel)]="minPrice"
+               (ngModelChange)="onMinPriceChange($event)"
+        >
         -
-        <input class="input-price" type="number" [(ngModel)]="maxPrice">
-        <button>OK</button>
+        <input class="input-price" type="number"
+               [(ngModel)]="maxPrice"
+               (ngModelChange)="onMaxPriceChange($event)"
+        >
       </div>
-      <mat-slider [(ngModel)]="minPrice" max='{{maxPrice}}' step="1" color="#f45454" discrete>
-        <input matSliderStartThumb ngDefaultControl name="minPriceName" [(ngModel)]="minPrice">
-        <input matSliderEndThumb [(ngModel)]="maxPrice">
+      <mat-slider max="{{maxInputValue}}" min="{{minInputValue}}" step="1" color="#f45454" discrete>
+        <input matSliderStartThumb ngDefaultControl [(ngModel)]="minPrice"
+               (ngModelChange)="onMinPriceChange($event)">
+        <input matSliderEndThumb [(ngModel)]="maxPrice"
+               (ngModelChange)="onMaxPriceChange($event)">
       </mat-slider>
-    </div>
-
-    <div class="filter nav_filter" (click)="tap(1)">
-      <h3>Категорія</h3>
-      <span class="arrow"></span>
-    </div>
-    <div class="nav_category category-filter hidden"
-         [ngClass]="{visible: visibleArray[1]}">
-      <div class="filter_input-container">
-        <input type="checkbox" id="menCategory">
-        <label for="menCategory">Mens</label>
-      </div>
-      <div class="filter_input-container">
-        <input type="checkbox" id="jeweleryCategory">
-        <label for="jeweleryCategory">Jewelery</label>
-      </div>
-    </div>
-
-    <div class="filter nav_filter" (click)="tap(2)">
-      <h3>Рейтинг</h3>
-      <span class="arrow"> </span>
-    </div>
-    <div class="nav_category category-filter hidden"
-         [ngClass]="{visible: visibleArray[2]}">
-      <div class="filter_input-container"
-           *ngFor="let rate of rateArray">
-        <input type="checkbox">
-        <label>{{rate}}</label>
-      </div>
-
     </div>
 
   </div>
