--- a/src/app/components/catalog-search/catalog-search.component.css
+++ b/src/app/components/catalog-search/catalog-search.component.css
@@ -4,6 +4,9 @@
   justify-content: center;
   align-items: center;
   width: 300px;
+  color: #464654;
+  border: 1px solid rgba(189, 189, 189, 0.2);
+  padding: 20px;
 }
 
 .search-header {
@@ -13,10 +16,10 @@
 .search-input {
   background-color: #F9F9FF;
   width: 300px;
-  height: 30px;
+  height: 40px;
   box-sizing: border-box;
   border: 1px solid #e5e5e5;
-  border-radius: 8px;
+  border-radius: 15px;
   padding-left: 50px;
   font-size: 20px;
   background-image: url("/assets/lupa.png");
@@ -24,10 +27,12 @@
   background-repeat: no-repeat;
   background-position-y: center;
   background-position-x: 15px;
+  transition: all 0.4s ease;
 }
 
 .search-input:focus {
   outline: none;
+  border: 1px solid #f45454;
 }
 
 .hidden {
@@ -48,7 +53,7 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  width: 300px;
+  width: 250px;
   justify-content: space-between;
 }
 
@@ -57,7 +62,7 @@
 }
 
 .input-price {
-  padding: 0;
+  padding-left: 5px;
   width: 67px;
   height: 32px;
   border: 1px solid #CCCCCC;
