--- a/src/app/components/basket/basket.component.css
+++ b/src/app/components/basket/basket.component.css
@@ -1,3 +1,63 @@
+.basket {
+  background-color: white;
+  max-width: 380px;
+  padding: 0 15px 10px 15px;
+  color: #464654;
+  height: 100vh;
+  z-index: 5;
+}
 
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.title {
+  font-size: 27px;
+  font-weight: 400;
+}
+
+.exit-btn {
+  border: none;
+  background-color: transparent;
+  font-size: 27px;
+  cursor: pointer;
+}
+
+.empty-img {
+  width: 350px;
+}
+
+.empty-section {
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.subtitle {
+  text-align: center;
+  font-size: 20px;
+}
+
+.continue-btn, .order-btn {
+  border: 1px solid black;
+  width: 100%;
+  height: 45px;
+  color: black;
+  background-color: transparent;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+
+.continue-btn:hover, .order-btn:hover {
+  background-color: black;
+  color: white;
+}
+
+.basket_order-btn {
+  margin-bottom: 10px;
+}
 
 /*# sourceMappingURL=basket.component.css.map */
