--- a/src/app/components/head/head.component.html
+++ b/src/app/components/head/head.component.html
@@ -7,5 +7,8 @@
        routerLinkActive = "active"
        [routerLinkActiveOptions]="{exact: true}"
     >{{itemNav.title}}</a>
+    <a class="nav-link link"
+       (click)="toggleShowBasket()"
+    >Корзина</a>
   </nav>
 </header>
