change some logic for basket, add basket items in local storage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-basket [(isShown)] = "isShowBasket"></app-basket>
+<!--<app-basket [(isShown)] = "isShowBasket"></app-basket>-->
 <app-head [(isShowBasket)] = "isShowBasket"></app-head>
 <router-outlet
 
