--- a/src/app/components/clothes-slider/clothes-slider.component.scss
+++ b/src/app/components/clothes-slider/clothes-slider.component.scss
@@ -9,7 +9,7 @@
   top: -170px;
   min-height: 450px;
   margin: 0 auto;
-  max-width: 1150px;
+  max-width: 60%;
   border-radius: 10px;
   background-color: white;
   filter: drop-shadow(0 0 15px rgba(0,0,0, 0.2));
