--- a/src/app/components/main-slider/main-slider.component.css
+++ b/src/app/components/main-slider/main-slider.component.css
@@ -7,14 +7,20 @@
 }
 
 .slider-container {
+  width: 100%;
   filter: opacity(0.85);
   background-size: cover;
   height: 900px;
   display: flex;
   align-items: center;
 }
+@media (max-width: 920px) {
+  .slider-container {
+    height: 600px;
+  }
+}
 
-.slider-wrapper {
+.main_slider-wrapper {
   margin-left: 100px;
 }
 
@@ -34,6 +40,9 @@
 .btn-container {
   display: flex;
   align-items: center;
+}
+
+.main_btn-container {
   margin-top: 40px;
 }
 
