--- a/src/app/components/main-slider/main-slider.component.html
+++ b/src/app/components/main-slider/main-slider.component.html
@@ -1,16 +1,19 @@
-<swiper-container [@enterToPage]>
+<main class="main">
+  <swiper-container [@enterToPage] class="main_slider">
 
-  <swiper-slide *ngFor="let itemSlider of sliderComponents"
-                class='slider-container'>
-    <div class="slider-wrapper">
-      <h1 class="title">{{itemSlider.title | uppercase}}</h1>
-      <p class="subtitle">{{itemSlider.firstSubTitle}}</p>
-      <p class="subtitle">{{itemSlider.secondSubTitle}}</p>
-      <p class="btn-container">
-        <a routerLink="/catalog" class="catalog-btn">В каталог</a>
-      </p>
-    </div>
-  </swiper-slide>
-</swiper-container>
+    <swiper-slide *ngFor="let itemSlider of sliderComponents"
+                  class='slider-container'>
+      <div class="main_slider-wrapper">
+        <h1 class="title">{{itemSlider.title | uppercase}}</h1>
+        <p class="subtitle">{{itemSlider.firstSubTitle}}</p>
+        <p class="subtitle">{{itemSlider.secondSubTitle}}</p>
+        <p class="main_btn-container btn-container">
+          <a routerLink="/catalog" class="catalog-btn">В каталог</a>
+        </p>
+      </div>
+    </swiper-slide>
+  </swiper-container>
+</main>
+
 
 
