--- a/src/app/components/basket/basket.component.css
+++ b/src/app/components/basket/basket.component.css
@@ -60,4 +60,10 @@
   margin-bottom: 10px;
 }
 
+.basket-items {
+  overflow: scroll;
+  overflow-x: hidden;
+  height: 430px;
+}
+
 /*# sourceMappingURL=basket.component.css.map */
